# guardian_ros_pkg

./: .cproject  .project  README.md
Eclipse/: eclipsePlugins.txt  rosWithEclipse.txt
ROS-Gazebo/: MigrationFromGroovyToHydro.sh  a1-Apps.sh  b1-ROS-Hydro.sh  b2-CatkinWorkspace.sh  b4-Gazebo-ros-pkgs-Groovy.sh  b4-Gazebo-ros-pkgs-Hydro.sh  c1-RViz-rosbuild-Groovy.sh  d1-Guardian-Groovy.sh  d1-Guardian-Hydro.sh
guardian_robot/guardian_complete/: CMakeLists.txt  package.xml
guardian_robot/guardian_complete/launch/: guardian_complete.launch  guardian_gball_ita.launch  guardian_gball_ita.launch.save  guardian_gball_ita.launch.save.1  test_guardian.launch  test_guardian2.launch  test_guardian3.launch  test_guardian_gmapping.launch  test_hokuyo.launch  test_kinect.launch  test_microstrain.launch
guardian_robot/guardian_description_r/: CMakeLists.txt  package.xml
guardian_robot/guardian_description_r/launch/: gball_description.launch  (+2 more)
guardian_robot/guardian_navigation/: CMakeLists.txt  Makefile  guardian_configuration.launch  mapserver.launch  package.xml
guardian_robot/guardian_navigation/launch/: guardian_navigation.launch  move_base.launch  rviz_navigation.launch
guardian_robot/guardian_navigation/maps/FEUP/: lab_corridor_machines3.yaml
guardian_robot/guardian_navigation/maps/ita/: demo.pgm  demo.yaml  ita_pasillo.pgm  ita_pasillo.yaml  l3.pgm  l3.yaml  l3_imu.pgm  l3_imu.yaml  l3_map.pgm  l3_map.yaml  l3_map2.pgm  l3_map2.yaml  l3_sinImu.pgm  l3_sinImu.yaml  pasillo_ita.pgm  pasillo_ita.yaml  pasillo_ita_or.pgm
guardian_robot/guardian_navigation/maps/ship_interior/: ship_interior.yaml  ship_interior_10cm.pgm  ship_interior_10cm.yaml  ship_interior_hector_slam.pgm  ship_interior_hector_slam.yaml  ship_interior_middle.yaml  ship_interior_right.yaml
guardian_robot/guardian_navigation/maps/simple_rectangle/: simple_rectangle.pgm  simple_rectangle.yaml
guardian_robot/guardian_navigation/navigation_amcl/: amcl_guardian.launch  guardian_fake_localization.launch  guardian_navigation.launch  move_base_amcl.launch
guardian_robot/guardian_navigation/navigation_config/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
guardian_robot/guardian_navigation/navigation_drl/: dynamic_robot_localization_planar.rviz
guardian_robot/guardian_navigation/navigation_local/: move_base_local.launch
guardian_robot/guardian_navigation/navigation_slam/: guardian_slam.launch  move_base_slam.launch  slam_gmapping.launch
guardian_robot/guardian_navigation/rviz/: guardian_localization.rviz  guardian_navigation.rviz  guardian_slam.rviz
guardian_robot/guardian_navigation/src/: send_multiple_goals.cpp
guardian_robot/guardian_node/: CMakeLists.txt  package.xml
guardian_robot/guardian_node/include/guardian_node/: RoboteqDevice.h  guardian_controller.h
guardian_robot/guardian_node/launch/: guardian_ax.launch  guardian_conf.yaml  guardian_joy.launch  guardian_pose_ekf.launch  guardian_roboteq.launch
guardian_robot/guardian_node/src/: RoboteqDevice.cpp  guardian_controller.cc  guardian_node.cpp  guardian_node_ax.cpp
guardian_robot/guardian_node/srv/: set_odometry_calibration.srv
guardian_robot/guardian_pad/: CMakeLists.txt  package.xml
guardian_robot/guardian_pad/launch/: logitech.yaml
guardian_robot/guardian_pad/src/: guardian_pad.cpp
guardian_robot/guardian_pad/src/guardian_pad/srv/: __init__.py  _enable_disable.py
guardian_robot/guardian_state_publisher/: CMakeLists.txt  package.xml
guardian_robot/guardian_state_publisher/launch/: guardian_state_publisher.launch
guardian_robot/guardian_static_tf/: CMakeLists.txt  package.xml
guardian_robot/guardian_static_tf/src/: guardian_static_tf.cpp  guardian_tf.cpp
guardian_robot/modbus_io/: CMakeLists.txt  Makefile  mainpage.dox  package.xml
guardian_robot/modbus_io/.svn/: all-wcprops  entries
guardian_robot/modbus_io/.svn/text-base/: manifest.xml.svn-base  readme.txt.svn-base
guardian_robot/modbus_io/include/.svn/: all-wcprops  entries
guardian_robot/modbus_io/include/modbus_io/: modbus-private.h
guardian_robot/modbus_io/include/modbus_io/.svn/: all-wcprops  entries
guardian_robot/modbus_io/launch/: test_io.launch
guardian_robot/modbus_io/launch/.svn/: all-wcprops  entries
guardian_robot/modbus_io/launch/.svn/text-base/: test_io.launch.svn-base
guardian_robot/modbus_io/msg/: modbus_io_msg.msg
guardian_robot/modbus_io/msg/.svn/: all-wcprops  entries
guardian_robot/modbus_io/src/: modbus-rtu.c  modbus-tcp.c  modbus.c  modbus_io_node.cpp
guardian_robot/modbus_io/src/.svn/: all-wcprops  entries
guardian_robot/modbus_io/src/.svn/text-base/: modbus_io_node.cpp.svn-base
guardian_robot/modbus_io/src/modbus_io/.svn/: all-wcprops  entries
guardian_robot/modbus_io/srv/: write_analog_output.srv  write_digital_output.srv
guardian_robot/modbus_io/srv/.svn/: all-wcprops  entries
guardian_sim/guardian_control/: CMakeLists.txt  package.xml
guardian_sim/guardian_description/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  package.xml
guardian_sim/guardian_gazebo/: CMakeLists.txt  mainpage.dox
guardian_sim/guardian_gazebo/include/: gazebo_ros_skid_steer_drive.h  laser_2D.h
guardian_sim/guardian_gazebo/launch/: gazebo.rviz  gball.launch  guardian.launch  guardian_office.launch  guardian_ship_interior.launch  guardian_simple_rectangle.launch  navigation.rviz  schunk_powerball.launch
guardian_sim/guardian_gazebo/models/: SimpleRectangleMap.STL
guardian_sim/guardian_gazebo/rviz/: gazebo.rviz
guardian_sim/guardian_gazebo/src/: husky_plugin_adapted.cpp  laser_2D.cpp  skid_steer_plugin.cpp
guardian_sim/guardian_gazebo/worlds/: guardian_ship_interior.world  guardian_simple_rectangle.world  ship_interior_gball.world  wheel_calibration.world
guardian_sim/guardian_joystick/: CMakeLists.txt  mainpage.dox  package.xml
guardian_sim/guardian_nav/: CMakeLists.txt  package.xml
guardian_sim/guardian_robot_control/: CMakeLists.txt
guardian_sim/robotnik_msgs/: CMakeLists.txt  package.xml
guardian_sim/robotnik_powerball_basics/: mainpage.dox  manifest.xml
(+79 files in other folders)
