<package>
	<name>guardian_pad</name>
  <version>0.0.1</version>
  <description>
     guardian_pad
  </description>
  <author>Robotnik Automation SLL</author>
  <license>BSD</license>
  <maintainer email="rnavarro@robotnik.es">rnavarro</maintainer>
  <url>http://ros.org/wiki/guardian_pad</url>

	<buildtool_depend>catkin</buildtool_depend>
<!--
  <depend package="roscpp"/>
  <depend package="sensor_msgs"/>

  <depend package="diagnostic_updater"/>
  <depend package="std_msgs"/>
  <depend package="robotnik_msgs"/>

-->
	<build_depend>roscpp</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>diagnostic_updater</build_depend>
	<build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>robotnik_msgs</build_depend>
  
  
  <run_depend>roscpp</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>diagnostic_updater</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>std_srvs</run_depend>
	<run_depend>robotnik_msgs</run_depend>
 
<!--
   <export>
    <cpp cflags="-I${prefix}/include  -I${prefix}/srv_gen/cpp/include -I${prefix}/msg_gen/cpp/include"/>
  </export>
-->
</package>


