<package>
  <name>guardian_state_publisher</name>
  <version>0.1.0</version>
  <description>guardian_state_publisher</description>
  <maintainer email="info@robotnik.es">Robotnik</maintainer>

  <author>>Robotnik Automation SLL</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/guardian_description_r</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>robot_state_publisher</build_depend>

  <run_depend>robot_state_publisher</run_depend>

</package>



