<package>
  <name>guardian_tf</name>
  <version>0.1.0</version>
  <description>Publishes the static transforms (relating to chassis) of the robot.</description>
  <maintainer email="info@robotnik.es">Robotnik</maintainer>

  <author>Robert</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/summit_odometry</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
</package>

